# NanoAnalytics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  gunicorn.conf.py  pyproject.toml  railway.json  render.yaml  wsgi.py
bots/: discord_bot.py  telegram_bot.py
nano_analytics/: __init__.py  auth.py  db.py  openapi.py  routes.py  ua_parser.py
static/: a.js
templates/: dashboard.html  docs.html  mcp.html
